Add steps to display workspace variables and Node.js version in main.yml workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,9 @@ jobs:
 
       - name: Mostrar fecha
         run: date
+
+      - name: Mostrar variables
+        run: echo $GITHUB_WORKSPACE
+
+      - name: Mostrar version de node
+        run: node -v
