Add checkout step for repository in main.yml workflow before creating a directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v5.0.0
+
       - name: crear carpeta
         run: mkdir carpeta
 
