--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5.0.0
 
-      - name: crear carpeta
-        run: mkdir carpeta
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v5.0.0
+        with:
+          node-version: 20.x
 
-      - name: Mostrar directorios
-        run: ls
-
-      - name: Mostrar fecha
-        run: date
-
-      - name: Mostrar variables
-        run: echo $GITHUB_WORKSPACE
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4.1.0
+        with:
+          version: 10
 
       - name: Mostrar version de node
         run: node -v
+
+      - name: Instalar dependencias
+        run: pnpm install
+
+      - name: Verificar formato
+        run: pnpm lint
