Add pull request trigger and concurrency settings to CI workflow in main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,12 @@ name: Node CI
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
+
+concurrency:
+  group: prefijo-ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   integrar-ci:
