--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,22 +14,23 @@ jobs:
   integrar-ci:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v5.0.0
 
-      - name: Setup Node.js environment
+      - name: Setup Node ${{ matrix.node-version }}
         uses: actions/setup-node@v5.0.0
         with:
-          node-version: 20.x
+          node-version: ${{ matrix.node-version }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.1.0
         with:
           version: 10
-
-      - name: Mostrar version de node
-        run: node -v
 
       - name: Instalar dependencias
         run: pnpm install
